<resources>
    <string name="app_name">Training1</string>
    <string name="fiche_idendit">Fiche Idendité</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="age">Age</string>
    <string name="adresse">Adresse</string>
    <string name="code_postale">Code Postale</string>
    <string name="ville">Ville</string>
    <string name="title_activity_create_profile">CreateProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="creation_profile">Creation Profile</string>

    <string name="empty_task_name">Le champs doit être renseigné</string>
</resources>